CityNexus.Infra.Seq/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citynexus-infra-seq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seq
  template:
    metadata:
      labels:
        app: seq
    spec:
      containers:
      - name: seq
        image: datalust/seq:latest
        ports:
        - containerPort: 5341
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
