CityNexus.Infra.Seq/service.yml
apiVersion: v1
kind: Service
metadata:
  name: citynexus-infra-seq
spec:
  selector:
    app: seq
  ports:
    - protocol: TCP
      port: 5341
      name: seq
      targetPort: 5341
    - protocol: TCP
      port: 80
      name: webui
      targetPort: 80
